serviceAccount-in-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: qa
spec:
  serviceAccountName: backend-qa
  automountServiceAccountToken: false    # you can auto-unmount-serviceAccounToken directly in pod
