Network-pol-deny-all.yml
# deny all ingress and all Egress trafic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: target-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
